# rad_dino

./: .gitignore  .gitmodules  README.md  environment.yaml  pyproject.toml  stdout_rad_dino_ddp.txt  stdout_rad_dino_eval.txt  stdout_rad_dino_eval_gradcam.txt
docs/data/: data.md
notebooks/: compute_dice_score.ipynb  exploratory.ipynb  exploratory_data_analysis.ipynb
rad_dino/: __init__.py
rad_dino/configs/: __init_.py  ark_zero_shot_config.py  config.py  config.yaml  data_config.yaml  model_config.yaml  text_prompts.json  train_config.yaml
rad_dino/data/: __init__.py  data_loader.py  dataset.py  label_mapping.py  preprocessing.py
rad_dino/eval/: __init__.py  cka_analyzer.py  evaluation_processor.py  explainable_visualizer.py  feature_extractor.py  inference.py  inference_engine.py
rad_dino/logging/: formatters.py  setup.py
rad_dino/loggings/: __init__.py  setup.py
rad_dino/models/: __init__.py  ark.py  base.py  biomedclip.py  dino.py  medimageinsight.py  model.py  siglip.py
rad_dino/run/: cka.py  inference.py  knn.py  svm.py  train.py  zero_shot_inference.py
rad_dino/src/: data.py  model.py  train.py  utils.py
rad_dino/train/: __init__.py  model_registry.py  train.py  train_utils.py  trainer.py
rad_dino/utils/: __init__.py  config_utils.py  cross_validation.py  data_utils.py  dice_score.py  eval_utils.py  extract_onnx_attentions.py  loss_utils.py  model_loader.py  plot_benchmark.py  plot_utils.py  plots.py  preprocessing_utils.py  roc_curve.py  train_utils.py  transforms.py  utils.py  (+2 more)
scripts/: benchmarking.py  cka_eval.sh  data_preprocessing.sh  eval.sh  knn_eval.sh  svm_eval.sh  train.sh  two_stage_train.sh  zero_shot_eval.sh
tests/: test_ark.py  test_ark_zero_shot_postprocess.py  test_biomedclip.py  test_data.py  test_data_loader.py  test_data_utils.py  test_dataset.py  test_dino.py  test_eval_metrics.py  test_inference.py  test_loss_utils.py  test_medimageinsight.py  test_model.py  test_model_registry.py  test_rsna_postprocess.py  test_siglip.py  test_train_pipeline.py  test_transforms.py
utils/: onnx_attention_tools.py
(+31 files in other folders)
