[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rad-dino"
version = "0.1.0"
authors = [
  { name="Chia-Hao Chang", email="chia.hao.chang@rwth-aachen.de" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "transformers==4.51.3",
    "torchmetrics==1.7.1",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "tqdm==4.67.1",
    "pydicom==3.0.1",
    "wandb==0.19.6",
    "einops==0.8.1",
    "kaggle==1.7.4",
    "datasets==3.3.2",
    "iterative-stratification==0.1.9",
    "pyyaml==6.0.2",
    "accelerate==1.9.0",
    "grad-cam==1.5.5",
    "onnx==1.18.0",
    "onnxruntime-gpu==1.22.0",
    "lxt==2.1",
    "huggingface_hub==0.34.3",
    "safetensors==0.5.3",
    "timm==1.0.19",
    "opencv-python==4.11.0.86",
    "scikit-image==0.25.2",
    "seaborn==0.13.2",
    "supervision==0.25.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rad_dino*"]

